--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.3.4",
+    "axios": "^1.3.3",
     "gapi-script": "^1.2.0",
+    "heroicons-react": "^1.4.1",
+    "mdb-react-ui-kit": "^5.1.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-components": "^0.5.1",
     "react-dom": "^18.2.0",
-    "react-router": "^6.8.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -42,7 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "stylelint-config-recommended": "^10.0.1",
+    "tailwindcss": "^3.2.7"
   }
 }
