--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
-    "gapi-script": "^1.2.0",
     "heroicons-react": "^1.4.1",
     "mdb-react-ui-kit": "^5.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-components": "^0.5.1",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
