--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.3.3",
-    "heroicons-react": "^1.4.1",
-    "mdb-react-ui-kit": "^5.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
-    "react-components": "^0.5.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
